--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.hssolution.paodiariolite"
+        applicationId "com.hssolution.paypaxxweb"
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
